// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPageSection is rendered 1`] = `
<div
  aria-label="aria-label"
  class="testClass1 testClass2 css-5knble-base-l-transparent-EuiPageSection"
  data-test-subj="test subject string"
>
  <div
    class="css-t14ecr-l-euiPageSectionWidth-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props alignment center is rendered 1`] = `
<div
  class="css-ehc4iu-base-l-center-transparent-EuiPageSection"
>
  <div
    class="css-vmivyf-l-euiPageSectionWidth-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props alignment horizontalCenter is rendered 1`] = `
<div
  class="css-zgne1y-base-l-horizontalCenter-transparent-EuiPageSection"
>
  <div
    class="css-vmivyf-l-euiPageSectionWidth-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props alignment top is rendered 1`] = `
<div
  class="css-5knble-base-l-transparent-EuiPageSection"
>
  <div
    class="css-t14ecr-l-euiPageSectionWidth-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props bottomBorder can be true 1`] = `
<div
  class="css-5knble-base-l-transparent-EuiPageSection"
>
  <div
    class="css-1pmiwis-l-border-euiPageSectionWidth-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props color accent is rendered 1`] = `
<div
  class="css-3ln4zr-base-l-accent-EuiPageSection"
>
  <div
    class="css-t14ecr-l-euiPageSectionWidth-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props color danger is rendered 1`] = `
<div
  class="css-a9afjs-base-l-danger-EuiPageSection"
>
  <div
    class="css-t14ecr-l-euiPageSectionWidth-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props color plain is rendered 1`] = `
<div
  class="css-11pfzw5-base-l-plain-EuiPageSection"
>
  <div
    class="css-t14ecr-l-euiPageSectionWidth-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props color primary is rendered 1`] = `
<div
  class="css-120z2my-base-l-primary-EuiPageSection"
>
  <div
    class="css-t14ecr-l-euiPageSectionWidth-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props color subdued is rendered 1`] = `
<div
  class="css-1qsqjwr-base-l-subdued-EuiPageSection"
>
  <div
    class="css-t14ecr-l-euiPageSectionWidth-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props color success is rendered 1`] = `
<div
  class="css-1y96cak-base-l-success-EuiPageSection"
>
  <div
    class="css-t14ecr-l-euiPageSectionWidth-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props color transparent is rendered 1`] = `
<div
  class="css-5knble-base-l-transparent-EuiPageSection"
>
  <div
    class="css-t14ecr-l-euiPageSectionWidth-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props color warning is rendered 1`] = `
<div
  class="css-1gasdpx-base-l-warning-EuiPageSection"
>
  <div
    class="css-t14ecr-l-euiPageSectionWidth-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props contentProps are passed down 1`] = `
<div
  class="css-5knble-base-l-transparent-EuiPageSection"
>
  <div
    aria-label="aria-label"
    class="testClass1 testClass2 css-t14ecr-l-euiPageSectionWidth-EuiPageSection"
    data-test-subj="test subject string"
  />
</div>
`;

exports[`EuiPageSection props grow can be true 1`] = `
<div
  class="css-xds71t-base-grow-l-transparent-EuiPageSection"
>
  <div
    class="css-t14ecr-l-euiPageSectionWidth-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props paddingSize l is rendered 1`] = `
<div
  class="css-5knble-base-l-transparent-EuiPageSection"
>
  <div
    class="css-t14ecr-l-euiPageSectionWidth-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props paddingSize m is rendered 1`] = `
<div
  class="css-agqje8-base-m-transparent-EuiPageSection"
>
  <div
    class="css-10tmy5d-m-euiPageSectionWidth-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props paddingSize none is rendered 1`] = `
<div
  class="css-ybl4ms-base-transparent-EuiPageSection"
>
  <div
    class="css-dbuvc0-euiPageSectionWidth-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props paddingSize s is rendered 1`] = `
<div
  class="css-6zpx68-base-s-transparent-EuiPageSection"
>
  <div
    class="css-168320g-s-euiPageSectionWidth-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props restrictWidth can be true 1`] = `
<div
  class="css-5knble-base-l-transparent-EuiPageSection"
>
  <div
    class="css-1diorln-l-euiPageSectionWidth-EuiPageSection"
  />
</div>
`;
